@@ -1,4 +1,3 @@
-Remove (Process)Sample::computeCenteredMoment
 Remove Distribution::getCenteredMoment
 Remove IterativeMoments::getCenteredMoments
 Drop deprecated GeneralLinearModelAlgorithm | KrigingAlgorithm ctors for 1.21
