@@ -515,11 +515,6 @@ Point Sample::computeCentralMoment(const UnsignedInteger k) const
   return getImplementation()->computeCentralMoment(k);
 }
 
-Point Sample::computeCenteredMoment(const UnsignedInteger k) const
-{
-  return getImplementation()->computeCenteredMoment(k);
-}
-
 /*
  * Gives the raw moment of order k of the sample (by component)
  */
