@@ -136,9 +136,6 @@ public:
   /** Gives the central moment of order k of the sample (by component) */
   Field computeCentralMoment(const UnsignedInteger k) const;
 
-  /** @deprecated */
-  Field computeCenteredMoment(const UnsignedInteger k) const;
-
   /** Gives the raw moment of order k of the sample (by component) */
   Field computeRawMoment(const UnsignedInteger k) const;
 
